--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>主页</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="../static/css/me.css">
+    <link rel="stylesheet" href="css/me.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                     <p style="font-size: 18px">Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
                 </div>
                 <div class="six wide right floated column">
-                    <img src="../static/img/EmptyImage.png" class="ui large bordered rounded image">
+                    <img src="img/EmptyImage.png" class="ui large bordered rounded image">
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                     <div class="column">
                         <h3 style="font-size: 30px">"I shouldn't have gone with their competitor."</h3>
                         <p>
-                            <img src="../static/img/nan.png" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+                            <img src="img/nan.png" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
                         </p>
                     </div>
                 </div>
