--- a/templates/tour.html
+++ b/templates/tour.html
@@ -5,8 +5,8 @@
     <title>游览</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="../static/css/me.css">
-    <link rel="stylesheet" href="../static/css/tour.css">
+    <link rel="stylesheet" href="css/me.css">
+    <link rel="stylesheet" href="css/tour.css">
 </head>
 <body>
     <nav style="background-color: #101010;">
@@ -34,19 +34,19 @@
     <div class="ui container content">
         <div class="ui segment black">
             <h2 class="ui horizontal divider header">简介</h2>
-            <img src="../static/img/EmptyImage.png" alt="" class="ui image">
+            <img src="img/EmptyImage.png" alt="" class="ui image">
             <p>生活的细微末节，渺小到尘埃的缝隙里，于交融的命盘上掀不起半点涟漪。那一路生长的绿叶，每一片都充满绿色的希望，不曾遗漏一丝营养。这小小的一支嫩芽如今已然成了一颗茁长。</p>
 
             <h2 class="ui horizontal divider header">简介</h2>
-            <img src="../static/img/EmptyImage.png" alt="" class="ui image">
+            <img src="img/EmptyImage.png" alt="" class="ui image">
             <p>生活的细微末节，渺小到尘埃的缝隙里，于交融的命盘上掀不起半点涟漪。那一路生长的绿叶，每一片都充满绿色的希望，不曾遗漏一丝营养。这小小的一支嫩芽如今已然成了一颗茁长。</p>
 
             <h2 class="ui horizontal divider header">简介</h2>
-            <img src="../static/img/EmptyImage.png" alt="" class="ui image">
+            <img src="img/EmptyImage.png" alt="" class="ui image">
             <p>生活的细微末节，渺小到尘埃的缝隙里，于交融的命盘上掀不起半点涟漪。那一路生长的绿叶，每一片都充满绿色的希望，不曾遗漏一丝营养。这小小的一支嫩芽如今已然成了一颗茁长。</p>
 
             <h2 class="ui horizontal divider header">简介</h2>
-            <img src="../static/img/EmptyImage.png" alt="" class="ui image">
+            <img src="img/EmptyImage.png" alt="" class="ui image">
             <p>生活的细微末节，渺小到尘埃的缝隙里，于交融的命盘上掀不起半点涟漪。那一路生长的绿叶，每一片都充满绿色的希望，不曾遗漏一丝营养。这小小的一支嫩芽如今已然成了一颗茁长。</p>
 
 
