--- a/templates/comeon.html
+++ b/templates/comeon.html
@@ -5,8 +5,8 @@
     <title>加入</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="../static/css/me.css">
-    <link rel="stylesheet" href="../static/css/comeon.css">
+    <link rel="stylesheet" href="css/me.css">
+    <link rel="stylesheet" href="css/comeon.css">
 </head>
 <body>
     <nav style="background-color: #101010;">
