--- a/templates/comeon.html
+++ b/templates/comeon.html
@@ -11,14 +11,15 @@
 <body>
     <nav style="background-color: #101010;">
         <div id="menu" class="ui container secondary inverted menu m-padded-tb">
+            <img src="img/logo.jpg" style="width: 70px" alt="" class="ui image item">
             <a class="ui item" href="index.html">主页</a>
             <a class="ui item" href="tour.html">游览</a>
             <a class="ui item" style="border-bottom: 3px solid #ffffff">加入</a>
-            <a class="ui item">生活</a>
-            <div class="ui item right">
-                <button class="ui inverted button" style="margin-right: 10px">登陆</button>
-                <button class="ui inverted button">注册</button>
-            </div>
+            <a class="ui item">施工中</a>
+<!--            <div class="ui item right">-->
+<!--                <button class="ui inverted button" style="margin-right: 10px">登陆</button>-->
+<!--                <button class="ui inverted button">注册</button>-->
+<!--            </div>-->
         </div>
     </nav>
 
